[gd_scene load_steps=4 format=3 uid="uid://bcpoahv1mpagi"]

[ext_resource type="Script" path="res://scripts/toppings.gd" id="1_75714"]
[ext_resource type="Texture2D" uid="uid://bsh83t3mm32wx" path="res://icon.svg" id="2_n2cm7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvako"]
size = Vector2(128, 127)

[node name="toppings" type="Node2D"]
position = Vector2(5, 5)
script = ExtResource("1_75714")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(3.8147e-06, 2.38419e-07)
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_n2cm7")

[node name="Area2D" type="Area2D" parent="Icon"]
position = Vector2(-24, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon/Area2D"]
position = Vector2(24, 2.5)
shape = SubResource("RectangleShape2D_dvako")

[connection signal="body_entered" from="Icon/Area2D" to="." method="_on_toppings_body_entered"]
[connection signal="body_exited" from="Icon/Area2D" to="." method="_on_toppings_body_exited"]
[connection signal="mouse_entered" from="Icon/Area2D" to="." method="_on_toppings_mouse_entered"]
[connection signal="mouse_exited" from="Icon/Area2D" to="." method="_on_toppings_mouse_exited"]
